# ai-customer-support-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  app.py  memory.db-shm  memory.db-wal  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  evaluation.yml
faiss_index/: index.faiss  index.pkl
knowledge-base/faq/: general_faq.md  refunds.md  shipping.md  warranty.md
knowledge-base/playbooks/: account_recovery.md  billing_dispute.md  escalation.md
knowledge-base/policies/: privacy.md  refund_policy.md  returns.md  shipping_policy.md  warranty_policy.md
knowledge-base/products/: smartwatch_x.md  wireless_earbuds.md
knowledge-base/raw_pdfs/: refund_policy_raw.txt
knowledge-base/troubleshooting/: order_tracking.md  payment_issues.md  smartwatch_x_troubleshooting.md  wireless_earbuds_troubleshooting.md
mcp_server/: server.py
notebooks/: customer_support.ipynb
results/: latest.json
scripts/: run_evaluation.py
src/: config.py  guardrails.py  mcp_client.py  retriever.py
src/agent/: graph.py  nodes.py  state.py
src/evaluation/: e2e_eval.py  rag_eval.py
tests/integration/: test_mcp_client.py  test_retriever.py
tests/unit/: test_config.py  test_guardrails.py  test_mcp_client.py  test_nodes.py  test_state.py
