[project]
name = "ai-customer-support-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"datasets>=2.0.0",
	"faiss-cpu>=1.8.0",
	"flashrank>=0.2.0",
	"gradio>=5.0.0",
	"ipython>=8.0.0",
	"langchain>=0.3.0",
	"langchain-community>=0.3.0",
	"langchain-core>=0.3.0",
	"langchain-text-splitters>=0.3.0",
	"langchain-mcp-adapters>=0.1.0",
	"langchain-openai>=0.2.0",
	"langgraph>=0.2.0",
	"mcp>=1.0.0",
	"nest-asyncio>=1.6.0",
	"openai>=1.0.0",
	"playwright>=1.50.0",
	"pydantic>=2.11.10,<2.13",
	"python-dotenv>=1.0.0",
	"rank-bm25>=0.2.0",
	"ragas>=0.1.0",
	"ipykernel>=7.2.0",
	"langgraph-checkpoint-sqlite>=2.0.0",
	"aiosqlite>=0.22.1",
	"fastapi>=0.115.0",
	"uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "anyio[trio]>=4.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
